@@ -26,17 +26,17 @@ DIST coreutils-8.9.tar.xz 4726864 RMD160 c97cbcc827af209575823ae1cc0d454aa8ff8b6
 EBUILD coreutils-8.12.ebuild 7309 RMD160 8a9a1bb539b4386be57d45d85c4f8f9c42ee50a2 SHA1 6258c0ebec1d11f42d18d6c20ee73c2c90dfa716 SHA256 d723c8ac81bfd113a1729dfc617276e65175b72ce095c1e4b27a7946de7963ad
 EBUILD coreutils-8.14.ebuild 7559 RMD160 877f894c91ad7974e92dfe375eae35810c82f2b9 SHA1 edf74551cf262f41d50e86516e500cc02d8330ce SHA256 29c888b9235fafe3c3efdcdad45edbda81f1366dccee42c27533ea0ae8e65983
 EBUILD coreutils-8.15.ebuild 7676 RMD160 ca64b98e58282f89c4d9030f274f673a2ad34c16 SHA1 5d6852d5b7965c3dfc65a478a733d1221b7d380c SHA256 d2098ba00bca2e3362678a220cfb1e6bfb8d71c37e722e26fd20cf5859101f87
-EBUILD coreutils-8.17.ebuild 7719 RMD160 a41552cc7cb0c1fac02f55810bd945f197a6a6fa SHA1 cad03038bf9513e489876d746b01447e140d791a SHA256 9d3b6e48278d7f1afe1e933e3e41a775860edad5d5e18b4537a9b70bab13d5f2
+EBUILD coreutils-8.17.ebuild 7779 RMD160 36060fec6277f9b6193cff9b6d9d27893d4a5563 SHA1 893389ba652f51f39ee06ea0a12dfc7db9b78bc1 SHA256 e2dc729ac954ab669cee7c99f39582da1fa9b4a287594c35b929f7b59a235b92
 EBUILD coreutils-8.5-r01.1.ebuild 6631 RMD160 cb5b71ac8bbdfcd9eb9c3a6cfd42eece7df180d7 SHA1 00584dc72bb15fc06efbfe7baa15ebd616276a17 SHA256 a17ff14a81e3cb5a0133cfe10479cae4c357367f628b5af04e7dbe218d2c1129
 EBUILD coreutils-8.5.ebuild 6333 RMD160 76ad59d05bbc249c7a40e32ae28249a25e7ab252 SHA1 bd14626fde5ba501a58e6a8018c6b4b3687ea2b5 SHA256 a1c130ec35af25e47e6c433e50de665d6afaa67b705f3398d5a35d9cc8223909
 EBUILD coreutils-8.8.ebuild 6949 RMD160 95a1eb9f412fc0d42d524e6ae9f374994d8f756e SHA1 1f1bbedf86692c0f5fa4112588557009599cf4f8 SHA256 2d21aaac9a03be9a40882530fe94594388b1283db0ed4f217aebbaabd7b02c51
 EBUILD coreutils-8.9.ebuild 6954 RMD160 c67b016d45a04ce0528226c651c8f63798cd1028 SHA1 198717a5dace8ebb02e9a49ec46885819ff59603 SHA256 cf4bf5690b7033754328715b4379310e347f86ec6ac1a9083089a0f45093cc89
-MISC ChangeLog 48850 RMD160 0d27478714e61c2af1a7b3497ced4aa17a900caf SHA1 67ef4994e49691a0a4e4c851305352f074921c3a SHA256 38ce0a33e9a63f8973c828391488b29b582fb33275f9251aa99bafe431ffb163
+MISC ChangeLog 49004 RMD160 fea65440849b68e6eadd515f7df9793ecbed9739 SHA1 350ce9b9ab5b8435e5388cb4a1e0bffbc1b58c07 SHA256 5d466e396c500edce2d1bade9a455aae7450987761db5d9e6f9923043a2ac9c1
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+tY08ACgkQX3X2B8XHTokKxACggfC/am4lE7dO4Z+yI971qbec
-Pw4AnAuHtd141WHDtPh/oTjyBBTnEfZb
-=2C9V
+iEYEARECAAYFAk/CFPAACgkQX3X2B8XHTonTRwCeOczaXtZY1U/meL5M8Bwgo1G6
+q0YAn0EGuniMvZQUDAtYk/++UOZZNDZj
+=WMGi
 -----END PGP SIGNATURE-----
