@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.338 2012/05/10 22:09:26 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.339 2012/05/24 02:33:02 vapier Exp $
+
+  24 May 2012; Mike Frysinger <vapier@gentoo.org> coreutils-8.17.ebuild:
+  Set gl_cv_func_realpath_works when cross-compiling #416629 by Robin Bankhead.
 
 *coreutils-8.17 (10 May 2012)
 
